# android_kernel_common-6.1-lts

./: Makefile  dhd_msgbuf.c  wb_regon_coordinator.c  wl_cfg80211.c  wl_cfg80211.h  wl_cfgscan.c  wl_cfgscan.h
arch/arm64/configs/: raviole_defconfig
dts/: gs101-common-bcl.dtsi  gs101-raviole-battery.dtsi
fs/: exec.c  open.c  readdir.c
google-devices/: Makefile
google-devices/common/: BUILD.bazel  README.md  bazel.WORKSPACE  device.bazelrc
google-devices/common/debug/: debug.bazelrc  debug_api_defconfig  debug_locking_defconfig  debug_memory_defconfig
google-devices/common/etm/: BUILD.bazel  etm_defconfig
google-devices/common/kleaf/: common.BUILD.bazel  create_file.bzl  kernel_aliases.bzl
google-devices/gs101/: BUILD.bazel  Kconfig.ext.gs101  device.bazelrc  gs101_defconfig  vendor_ramdisk.modules.gs101
google-devices/gs101/dts/: Makefile  gs101-common-typec.dtsi  gs101.dtsi
google-devices/raviole/: BUILD.bazel  Kconfig.ext  build_raviole.sh  constants.bzl  device.bazelrc
google-devices/raviole/dts/: Makefile  bluejay  gs101-oriole-camera.dtsi  gs101-raven-camera.dtsi  gs101-raviole-bcl.dtsi  gs101-raviole-charging.dtsi  gs101-raviole-wcharger.dtsi  gs101-slider-wcharger.dtsi  gs101-slider1-battery.dtsi  gs101-slider2-battery.dtsi  gs101-whitefin2-wcharger.dtsi
google-modules/: Makefile
google-modules/amplifiers/cs40l25/: cs40l2x.c
google-modules/amplifiers/cs40l26/: cs40l26.c  cs40l26.h
google-modules/aoc/alsa/: Kbuild  aoc_alsa.h  aoc_alsa_ctl.c  aoc_alsa_hw.c
google-modules/bms/: google_battery.c  google_cpm.c  max77759_charger.c
google-modules/display/common/gs_drm/: gs_drm_connector.c
google-modules/display/common/gs_panel/: drm_bridge_funcs.c  gs_dsi_dcs_helper.c  gs_panel.c  gs_panel_connector_funcs.c  gs_panel_internal.h  gs_panel_lhbm.c  gs_panel_sysfs.c
google-modules/display/common/gs_panel/Documentation/ABI/testing/: sysfs-devices-platform-gs-drm-connector-panel
google-modules/display/common/include/gs_drm/: gs_display_mode.h  gs_drm_connector.h
google-modules/display/common/include/gs_panel/: dcs_helper.h  gs_panel.h
google-modules/display/samsung/cal_9845/: dqe_reg.c
google-modules/edgetpu/abrolhos/drivers/edgetpu/: BUILD.bazel  Makefile
google-modules/gpu/mali_kbase/: Kbuild  Makefile
google-modules/gpu/mali_kbase/csf/: mali_kbase_csf.c  mali_kbase_csf_scheduler.c  mali_kbase_csf_scheduler.h
google-modules/gpu/mali_kbase/mmu/backend/: mali_kbase_mmu_csf.c
google-modules/gpu/mali_kbase/platform/pixel/: pixel_gpu_debug.h
google-modules/lwis/: lwis_allocator.c  lwis_buffer.c  lwis_buffer.h  lwis_bus_manager.c  lwis_clock.c  lwis_clock.h  lwis_commands.h  lwis_debug.c  lwis_debug.h  lwis_device.c  lwis_device.h  lwis_device_dpm.c  lwis_device_dpm.h  lwis_device_i2c.c  lwis_device_i2c.h  lwis_device_ioreg.c  lwis_device_ioreg.h  lwis_device_slc.c  lwis_device_slc.h  lwis_device_spi.c  lwis_device_spi.h  lwis_device_test.c  lwis_device_top.c  lwis_device_top.h  lwis_dt.c  lwis_dt.h  lwis_event.c  lwis_event.h  lwis_fence.c  lwis_fence.h  lwis_gpio.c  lwis_gpio.h  lwis_i2c.c  lwis_i2c.h  lwis_interrupt.c  lwis_interrupt.h  lwis_io_entry.c  lwis_io_entry.h  lwis_ioctl.c  lwis_ioctl.h  (+23 more)
google-modules/lwis/platform/anchorage/: lwis_platform_anchorage.c  lwis_platform_anchorage.h  lwis_platform_anchorage_dma.c
google-modules/lwis/platform/busan/: lwis_platform_busan.c
google-modules/lwis/platform/casablanca/: lwis_platform_casablanca.c
google-modules/nfc/ese/: st33spi.c
google-modules/power/mitigation/: google_bcl_core.c
google-modules/radio/samsung/s5300/: Kbuild  link_device.c  link_rx_pktproc.c  modem_variation.h
google-modules/soc/gs/drivers/clocksource/: exynos_mct.c
google-modules/soc/gs/drivers/media/platform/exynos/mfc/: mfc_dec_v4l2.c
google-modules/soc/gs/drivers/phy/samsung/: phy-exynos-usb3p1.c
google-modules/soc/gs/drivers/usb/dwc3/: dwc3-exynos.c
google-modules/touch/common/: BUILD.bazel  goog_touch_interface.c
google-modules/touch/common/include/uapi/input/: touch_offload.h
google-modules/touch/common/usi/: goog_usi_stylus.c
google-modules/touch/fts_touch/fst2/: fts.c
google-modules/touch/fts_touch/ftm5/: BUILD.bazel  fts.c
google-modules/touch/fts_touch/ftm5_legacy/: Kbuild  Makefile  fts.c
google-modules/touch/sec_touch/: BUILD.bazel  Kbuild  Makefile  sec_ts.c
google-modules/wlan/bcm4389/: Kbuild  dhd_common.c  dhd_pcie_linux.c  wl_android.c  wl_cfg80211.c  wl_cfgscan.c  wl_cfgvif.c
kernel/: exit.c
net/unix/: af_unix.c
(+1 files in other folders)
